[gd_scene load_steps=23 format=2]

[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/NextMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/SettingIcon.png" type="Texture" id=2]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Derival/SettingArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/UnkownIcon.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ExtrasIcon.png" type="Texture" id=6]
[ext_resource path="res://Sprites/PlayIcon.png" type="Texture" id=7]
[ext_resource path="res://font/Built/Ubuntu_B_72.tres" type="DynamicFont" id=8]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/InheritableMenuArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-M.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Derival/UnknownArea.tscn" type="PackedScene" id=11]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-B.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Derival/ExtrasArea.tscn" type="PackedScene" id=13]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Derival/LevelSelectArea.tscn" type="PackedScene" id=14]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Derival/GameplayLevelLoadingInfoArea.tscn" type="PackedScene" id=15]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/NextMenuBackButton.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
resource_name = "Ubuntu Medium 48"
size = 48
outline_size = 1
outline_color = Color( 0.129412, 0, 0.219608, 1 )
font_data = ExtResource( 10 )

[sub_resource type="ButtonGroup" id=2]
resource_name = "Category Select Group"

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
resource_name = "Ubuntu Medium 48"
size = 48
outline_size = 1
outline_color = Color( 0.129412, 0, 0.219608, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
resource_name = "Ubuntu 72 Bold"
size = 72
outline_size = 3
outline_color = Color( 0.0862745, 0.0392157, 0.317647, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
resource_name = "Ubuntu 72 Bold"
size = 72
outline_size = 3
outline_color = Color( 0.0862745, 0.0392157, 0.317647, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
resource_name = "Ubuntu Medium 48"
size = 48
outline_size = 1
outline_color = Color( 0.129412, 0, 0.219608, 1 )
font_data = ExtResource( 10 )

[node name="NextMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
TitleIcon = ExtResource( 2 )
MainMenuBack = ExtResource( 3 )
SettingArea = ExtResource( 4 )
LoadSettingIcon = ExtResource( 2 )
LoadUnknownIcon = ExtResource( 5 )
LoadExtrasIcon = ExtResource( 6 )
LoadPlayGameIcon = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HeadingBar" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 1920.0
margin_bottom = 150.0

[node name="IconArea" type="CenterContainer" parent="VBoxContainer/HeadingBar"]
margin_right = 152.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HeadingBar/IconArea"]
margin_left = 26.0
margin_top = 25.0
margin_right = 126.0
margin_bottom = 125.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TitleBarArea" type="HBoxContainer" parent="VBoxContainer/HeadingBar"]
margin_left = 160.0
margin_right = 1920.0
margin_bottom = 150.0
rect_min_size = Vector2( 1760, 150 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HeadingBar/TitleBarArea"]
margin_right = 1760.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 8 )
text = "Next Menu TitleBar!"
valign = 1
autowrap = true
clip_text = true

[node name="MenuSpaceArea" type="Control" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 1920.0
margin_bottom = 972.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InheritableMenuArea" parent="VBoxContainer/MenuSpaceArea" instance=ExtResource( 9 )]
visible = false

[node name="SettingArea" parent="VBoxContainer/MenuSpaceArea" instance=ExtResource( 4 )]
editor/display_folded = true
visible = false

[node name="InheritableCategoryButton" parent="VBoxContainer/MenuSpaceArea/SettingArea/HBoxContainer/CategoryScrolling/CategorySelection" index="0"]
custom_fonts/font = SubResource( 1 )
group = SubResource( 2 )

[node name="DummyCategory" parent="VBoxContainer/MenuSpaceArea/SettingArea/HBoxContainer/ScrollContainer" index="0"]
margin_right = 1412.0

[node name="LinkButton" parent="VBoxContainer/MenuSpaceArea/SettingArea/HBoxContainer/ScrollContainer/DummyCategory" index="17"]
custom_fonts/font = SubResource( 3 )

[node name="HSlider" parent="VBoxContainer/MenuSpaceArea/SettingArea/HBoxContainer/ScrollContainer/DummyCategory" index="19"]
ticks_on_borders = true

[node name="UnknownArea" parent="VBoxContainer/MenuSpaceArea" instance=ExtResource( 11 )]
editor/display_folded = true
visible = false

[node name="EditMe" parent="VBoxContainer/MenuSpaceArea/UnknownArea" index="0"]
custom_fonts/font = SubResource( 4 )

[node name="ExtrasArea" parent="VBoxContainer/MenuSpaceArea" instance=ExtResource( 13 )]
editor/display_folded = true
visible = false

[node name="ItemList" parent="VBoxContainer/MenuSpaceArea/ExtrasArea" index="0"]
custom_fonts/font = SubResource( 5 )

[node name="LevelSelectArea" parent="VBoxContainer/MenuSpaceArea" instance=ExtResource( 14 )]
editor/display_folded = true
visible = false

[node name="HBoxContainer" parent="VBoxContainer/MenuSpaceArea/LevelSelectArea/ScrollContainer" index="0"]
margin_bottom = 814.0

[node name="GameplayLevelLoadingInfoArea" parent="VBoxContainer/MenuSpaceArea" instance=ExtResource( 15 )]
visible = false

[node name="ButtonNavigateArea" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 980.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 100 )

[node name="BackButton" parent="VBoxContainer/ButtonNavigateArea" instance=ExtResource( 16 )]
custom_fonts/font = SubResource( 6 )
[connection signal="LeaveAndBackToMenu" from="VBoxContainer/MenuSpaceArea/UnknownArea" to="." method="_on_UnknownArea_LeaveAndBackToMenu"]
[connection signal="PleaseLoadThisLevelOf" from="VBoxContainer/MenuSpaceArea/LevelSelectArea" to="." method="_on_LevelSelectArea_PleaseLoadThisLevelOf"]
[connection signal="pressed" from="VBoxContainer/ButtonNavigateArea/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="VBoxContainer/MenuSpaceArea/SettingArea"]

[editable path="VBoxContainer/MenuSpaceArea/UnknownArea"]

[editable path="VBoxContainer/MenuSpaceArea/ExtrasArea"]

[editable path="VBoxContainer/MenuSpaceArea/LevelSelectArea"]
