[gd_scene load_steps=4 format=2]

[ext_resource path="res://MenuPart/NextMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/SettingIcon.png" type="Texture" id=2]
[ext_resource path="res://font/Built/Ubuntu_B_72.tres" type="DynamicFont" id=3]

[node name="NextMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="IconArea" type="CenterContainer" parent="."]
editor/display_folded = true
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="IconArea"]
margin_left = 25.0
margin_top = 25.0
margin_right = 125.0
margin_bottom = 125.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TitleBarArea" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
margin_left = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 1770, 150 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TitleBarArea"]
margin_right = 1770.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "Next Menu TitleBar!"
valign = 1
autowrap = true
clip_text = true

[node name="ButtonNavigateArea" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0

[node name="BackButton" type="Button" parent="ButtonNavigateArea"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ButtonNavigateArea/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="focus_entered" from="ButtonNavigateArea/BackButton" to="." method="_on_BackButton_focus_entered"]
[connection signal="mouse_entered" from="ButtonNavigateArea/BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="ButtonNavigateArea/BackButton" to="." method="_on_BackButton_pressed"]
